# PDAJ_FTN

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  table.txt
src/generator/: main.py
src/mpi/: main.py
src/multiprocessing/: main.py
src/pdaj_proj/: manage.py
src/pdaj_proj/matrix_cluster/: apps.py  views.py
src/pdaj_proj/matrix_cluster/generator/: main.py
src/pdaj_proj/matrix_cluster/multiprocessing/: main.py
src/pdaj_proj/matrix_cluster/sequential/: main.py
src/pdaj_proj/pdaj_proj/: asgi.py  settings.py  urls.py  wsgi.py
src/sequential/: main.py
